--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,7 +18,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        python .\manage.py migrate --run-syncdb
     - name: Test with pytest
       working-directory: ./actions
-      run: pytest
+      run: |
+        python .\manage.py migrate --run-syncdb
+        pytest
