--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,5 @@ jobs:
     - name: Test with pytest
       working-directory: ./actions
       run: |
-        python .\manage.py migrate --run-syncdb
+        manage.py migrate --run-syncdb
         pytest
