--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,5 +21,6 @@ jobs:
     - name: Test with pytest
       working-directory: ./actions
       run: |
-        manage.py migrate --run-syncdb
+        manage.py makemigrations
+        manage.py migrate
         pytest
