--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Test with pytest
       working-directory: ./actions
       run: |
-        manage.py makemigrations
-        manage.py migrate
+        python manage.py makemigrations
+        python manage.py migrate
         pytest
